--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+remappings = [
+  "forge-std=lib/forge-std/src/",
+  "@openzeppelin-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[rpc_endpoints]
+goerli = "${GOERLI_RPC_URL}"
