Added deployment script, imported sdk, changed readme and license

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 GOERLI_RPC_URL=https://rpc.ankr.com/eth_goerli
+SEPOLIA_RPC_URL=https://endpoints.omniatech.io/v1/eth/sepolia/public
+POLYGON_RPC_URL=https://polygon-rpc.com/
 PRIVATE_KEY=
