--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,15 @@
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 	branch = v1.5.0
+[submodule "lib/knowyourcat-sdk"]
+	path = lib/knowyourcat-sdk
+	url = https://github.com/KnowYourCat/knowyourcat-sdk
+	branch = v1.1.0
 [submodule "lib/openzeppelin-contracts-upgradeable"]
 	path = lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
 	branch = v4.8.0
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	branch = v4.8.1
